Added style changes in admin/coach portal and added more routes

--- a/dlc_site/package.json
+++ b/dlc_site/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mantine/core": "^4.2.8",
+    "@mantine/dates": "^4.2.8",
+    "@mantine/hooks": "^4.2.8",
     "@react-keycloak/web": "^3.4.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "dayjs": "^1.11.3",
     "formik": "^2.2.9",
     "keycloak-js": "^18.0.0",
     "react": "^18.0.0",
