--- a/dlc_site/package.json
+++ b/dlc_site/package.json
@@ -15,6 +15,7 @@
     "keycloak-js": "^18.0.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.2",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
